--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue + TS</title>
+    <!--preload-links-->
+    <script>
+      window.INITIAL_DATA = '__INITIAL_DATA__'
+    </script>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/entry-client.ts"></script>
   </body>
 </html>
